Add main.js and ventana modal

--- a/index.html
+++ b/index.html
@@ -94,7 +94,26 @@
     </div>
 
 
+    <!-- -----------------------Ventana Modal-------------------  -->
+    <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="tituloModal" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="tituloModal">Título del Modal</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="ruta-de-tu-imagen.jpg" alt="Descripción de la imagen">
+                    <p class="modalDescrip">Texto del modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
 
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -----------------------Fin Ventana Modal-------------------  -->
     <div class="Secciones">
         <div id="Camas" class="Fix"></div>
 
@@ -109,7 +128,7 @@
                 <div class="info-product">
                     <h3 class="TituloModal">Gea</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -118,9 +137,9 @@
                     <img src="pintura/img_Logo.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Luna</h3 class="TituloModal">
+                    <h3 class="TituloModal">Luna</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -129,9 +148,9 @@
                     <img src="pintura/Madre.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Madre</h3 class="TituloModal">
+                    <h3 class="TituloModal">Madre</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -140,9 +159,9 @@
                     <img src="pintura/Pacha mama Mari.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Pacha mama Mari</h3 class="TituloModal">
+                    <h3 class="TituloModal">Pacha mama Mari</h3>
                     <p class="Descrip">Es la deidad vasca que representa la naturaleza y a ella la celebramos en los solisticios.</p>
-                    <p class="price">$600</p>
+                    <p class="price">€600</p>
                 </div>
             </div>
 
@@ -151,9 +170,9 @@
                     <img src="pintura/Árbol 60 X80.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
+                    <h3 class="TituloModal">Árbol 60 X80</h3>
                     <p class="Descrip">Representa la naturaleza, pero tambien el mundo subterraneo que se refleja como un espejo.</p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -162,9 +181,9 @@
                     <img src="pintura/Día y Noche.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Día y Noche</h3 class="TituloModal">
+                    <h3 class="TituloModal">Día y Noche</h3>
                     <p class="Descrip">Es una representacion festiva del ser humano, celebrando a la naturaleza</p>
-                    <p class="price">$200</p>
+                    <p class="price">€200</p>
                 </div>
             </div>
 
@@ -173,9 +192,9 @@
                     <img src="pintura/Diáspora 70 X 30 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Diáspora 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Diáspora 70 X 30 cm</h3>
                     <p class="Descrip">Son los movimientos migratorios, a los que se ve avocado un grupo de personas</p>
-                    <p class="price">$200</p>
+                    <p class="price">€200</p>
                 </div>
             </div>
 
@@ -184,9 +203,9 @@
                     <img src="pintura/Ecos de Africa 2 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Ecos de Africa 2 140 X 100 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Ecos de Africa 2 140 X 100 cm</h3>
                     <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
-                    <p class="price">$600</p>
+                    <p class="price">€600</p>
                 </div>
             </div>
 
@@ -196,9 +215,9 @@
                     <img src="pintura/Ecos de Africa 3 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
+                    <h3 class="TituloModal">Árbol 60 X80</h3>
                     <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
-                    <p class="price">$600</p>
+                    <p class="price">€600</p>
                 </div>
             </div>
 
@@ -207,9 +226,9 @@
                     <img src="pintura/Ecos de Africa 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
+                    <h3 class="TituloModal">Árbol 60 X80</h3>
                     <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
-                    <p class="price">$600</p>
+                    <p class="price">€600</p>
                 </div>
             </div>
 
@@ -218,9 +237,9 @@
                     <img src="pintura/Encuentro.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Encuentro</h3 class="TituloModal">
+                    <h3 class="TituloModal">Encuentro</h3>
                     <p class="Descrip">Representa la amistad o el amor como una situacion que nos sucede en la vida.</p>
-                    <p class="price">$200</p>
+                    <p class="price">€200</p>
                 </div>
             </div>
 
@@ -229,9 +248,9 @@
                     <img src="pintura/Equus 60 X 80 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Equus 60 X 80 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Equus 60 X 80 cm</h3>
                     <p class="Descrip">Este lienzo quiere transmitirnos los movimientos equinos tal como estarian en la pared de una cueva.</p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -240,9 +259,9 @@
                     <img src="pintura/Festividad 60 X 80 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Festividad 60 X 80 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Festividad 60 X 80 cm</h3>
                     <p class="Descrip"> Mari en la mitologia vazca es la pacha mama de la mitologia andina en honor de ellas celebramos por todo lo que recibimos.</p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
 
@@ -251,9 +270,9 @@
                     <img src="pintura/Festivo 56 X 46 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Festivo 56 X 46 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Festivo 56 X 46 cm</h3>
                     <p class="Descrip">Los humanos desde tiempos ansestrales celebramos todo lo que nos ofrece la pacha mama con alegria y veneracion.</p>
-                    <p class="price">$300</p>
+                    <p class="price">€300</p>
                 </div>
             </div>
             <div class="item_sur">
@@ -261,9 +280,9 @@
                     <img src="pintura/Migración 117 X 80 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Migración 117 X 80 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Migración 117 X 80 cm</h3>
                     <p class="Descrip">Es una constante en mi obra y en la historioa de la humanidad, la migracion de grupos humanos o pueblos buscando un futuro mejor.</p>
-                    <p class="price">$450</p>
+                    <p class="price">€450</p>
                 </div>
             </div>
 
@@ -272,9 +291,9 @@
                     <img src="pintura/Personajes 130 X 140 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Personajes 130 X 140 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Personajes 130 X 140 cm</h3>
                     <p class="Descrip">Son las representacion de aquellas personas que nos han marcado en la vida por diversas circustancias, hechiceras, magas que hacen de este mundo un sitio mejor para vivir.</p>
-                    <p class="price">$800</p>
+                    <p class="price">€800</p>
                 </div>
             </div>
 
@@ -283,9 +302,9 @@
                     <img src="pintura/Vuelvo al Sur 70 X 30 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <!-- ---------------------Esculturas---------------------------------------- -->
@@ -295,9 +314,9 @@
                     <img src="Escultura/Es1.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -305,9 +324,9 @@
                     <img src="Escultura/es2.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -315,9 +334,9 @@
                     <img src="Escultura/es3.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -325,9 +344,9 @@
                     <img src="Escultura/es4.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -335,9 +354,9 @@
                     <img src="Escultura/es5.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -345,9 +364,9 @@
                     <img src="Escultura/es6.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
             <div class="item">
@@ -355,9 +374,9 @@
                     <img src="Escultura/es7.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3 class="TituloModal">
+                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">€80</p>
                 </div>
             </div>
 
