--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="icon" type="image/svg+xml" href="pintura/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="pintura/Logo_Hector.ico" />
 </head>
 
 <body>
@@ -34,14 +34,14 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Sobre mí</a>
+                                <a class="nav-link active" aria-current="page" href="sobreMi.html">Sobre mí</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Pintura</a>
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link" href="#">Escultura</a>
+                                <a class="nav-link" href="escultura.html">Escultura</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Grabado</a>
@@ -65,33 +65,7 @@
         </div>
     </header>
 
-    <div class="contenedor">
-        <section class="hero">
-            <img class="imgMain" src="pintura/Perfil.enc" alt="Sobre mi" />
-            <div class="contenido-hero">
-                <h2 class="titulo">Héctor<span>Luna</span></h2>
-            </div>
 
-        </section>
-        <main class="parrafo">
-
-            <h3>
-                <i>
-          Artistasta Plastico 
-        </i>
-            </h3>
-            <p>
-                <br />
-                <strong><i> </i></strong> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, praesentium amet, non exercitationem nostrum, perferendis vitae ea tempore voluptate velit consequatur! Dicta porro repudiandae quis in debitis ipsam
-                dolores explicabo.
-                <br />
-                <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eaque qui saepe perferendis voluptatum et nesciunt reiciendis quia perspiciatis vitae aperiam dolorem voluptatibus adipisci sunt maxime, doloremque, pariatur quas
-                quisquam.
-            </p>
-        </main>
-
-
-    </div>
 
 
     <!-- -----------------------Ventana Modal-------------------  -->
@@ -126,31 +100,22 @@
                     <img src="pintura/Gea.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Gea</h3>
-                    <p class="Descrip"> </p>
-                    <p class="price">€300</p>
+                    <h3 class="TituloModal">Gea-Mari 40x50</h3>
+                    <p class="Descrip">La obra hace referencia a la mujer y la naturealeza como generadoras de vida.</p>
+                    <p class="price">€350</p>
                 </div>
             </div>
 
-            <div class="item">
-                <figure>
-                    <img src="pintura/img_Logo.jpeg" loading="lazy" alt="cuadro" />
-                </figure>
-                <div class="info-product">
-                    <h3 class="TituloModal">Luna</h3>
-                    <p class="Descrip"> </p>
-                    <p class="price">€300</p>
-                </div>
-            </div>
+
 
             <div class="item">
                 <figure>
                     <img src="pintura/Madre.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Madre</h3>
-                    <p class="Descrip"> </p>
-                    <p class="price">€300</p>
+                    <h3 class="TituloModal">Fiesta de Primavera 60x40</h3>
+                    <p class="Descrip">Esta obra se sumerge en el renacer de la naturaleza y la magia de la vida.</p>
+                    <p class="price">€450</p>
                 </div>
             </div>
 
@@ -159,9 +124,9 @@
                     <img src="pintura/Pacha mama Mari.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Pacha mama Mari</h3>
-                    <p class="Descrip">Es la deidad vasca que representa la naturaleza y a ella la celebramos en los solisticios.</p>
-                    <p class="price">€600</p>
+                    <h3 class="TituloModal">Pachamama Mari</h3>
+                    <p class="Descrip">Es la deidad vasca que representa la naturaleza y a ella la celebramos en los solisticios y en los equinoccios.</p>
+                    <p class="price">€750</p>
                 </div>
             </div>
 
@@ -170,9 +135,9 @@
                     <img src="pintura/Árbol 60 X80.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3>
+                    <h3 class="TituloModal">Árbol 60X40</h3>
                     <p class="Descrip">Representa la naturaleza, pero tambien el mundo subterraneo que se refleja como un espejo.</p>
-                    <p class="price">€300</p>
+                    <p class="price">€450</p>
                 </div>
             </div>
 
@@ -181,7 +146,7 @@
                     <img src="pintura/Día y Noche.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Día y Noche</h3>
+                    <h3 class="TituloModal">Fiesta de Primavera II 40x50</h3>
                     <p class="Descrip">Es una representacion festiva del ser humano, celebrando a la naturaleza</p>
                     <p class="price">€200</p>
                 </div>
@@ -193,8 +158,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Diáspora 70 X 30 cm</h3>
-                    <p class="Descrip">Son los movimientos migratorios, a los que se ve avocado un grupo de personas</p>
-                    <p class="price">€200</p>
+                    <p class="Descrip"><b> Técnica-</b> Oleo sobre lienzo<br> <b> Descripción:</b> Son los movimientos migratorios, a los que se ve abocados un grupo de personas.</p>
+                    <p class="price">€350</p>
                 </div>
             </div>
 
@@ -215,7 +180,7 @@
                     <img src="pintura/Ecos de Africa 3 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3>
+                    <h3 class="TituloModal">Ecos de Africa 3 140 X 100 cm</h3>
                     <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
                     <p class="price">€600</p>
                 </div>
@@ -226,7 +191,7 @@
                     <img src="pintura/Ecos de Africa 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Árbol 60 X80</h3>
+                    <h3 class="TituloModal">Ecos de Africa 140 X 100 cm</h3>
                     <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
                     <p class="price">€600</p>
                 </div>
@@ -303,13 +268,13 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
-                    <p class="price">€80</p>
+                    <p class="Descrip"><b>Técnica-</b> Oleo sobre lienzo <b>Descripción:</b> Volver al sur es el anhelo y la aspiración de muchos migrantes que se han despalazado en busca de una vida mejor.
+                        <p class="price">€350</p>
                 </div>
             </div>
             <!-- ---------------------Esculturas---------------------------------------- -->
 
-            <div class="item">
+            <!-- <div class="item">
                 <figure>
                     <img src="Escultura/Es1.JPG" loading="lazy" alt="cuadro" />
                 </figure>
@@ -378,7 +343,7 @@
                     <p class="Descrip"> </p>
                     <p class="price">€80</p>
                 </div>
-            </div>
+            </div> -->
 
             <div id="contacto" class="Fix"></div>
 
@@ -389,14 +354,14 @@
             <img src="pintura/whatsapp.png" alt="Icono de WhatsApp" height="60px" />
         </a>
         <footer class="footer">
-            <img src="pintura/favicon.svg" alt="" width="18px" /></div>
+            <img src="pintura/Logo_Hector.ico" alt="" width="18px" /></div>
     <b>Hector Luna</b></p>
 
     </footer>
     <!-- <script src="index.js"></script> -->
 
     <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
