Add Footerin all html pages

--- a/escultura.html
+++ b/escultura.html
@@ -87,8 +87,8 @@
                     <img src="Escultura/Eva Descanzando.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Eva Descanzando</h3>
+                    <p class="Descrip">Escultura en ceramica</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -97,8 +97,8 @@
                     <img src="Escultura/Mari Cabalgando.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Mari Cabalgando</h3>
+                    <p class="Descrip">Escultura en ceramica aerea</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -107,8 +107,8 @@
                     <img src="Escultura/Mari pachamama escultura en ceramica aerea.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Mari pachamama</h3>
+                    <p class="Descrip">Escultura en ceramica aerea</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -117,8 +117,8 @@
                     <img src="Escultura/Maternidad  escultura en ceramica.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Maternidad</h3>
+                    <p class="Descrip">Escultura en ceramica</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                     <img src="Escultura/Meditacion  escultura en ceramica.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Meditacion</h3>
+                    <p class="Descrip">Escultura en ceramica</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -137,8 +137,8 @@
                     <img src="Escultura/Reposo  escultura en ceramica.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Reposo</h3>
+                    <p class="Descrip">Escultura en ceramica</p>
                     <p class="price">€80</p>
                 </div>
             </div>
@@ -147,13 +147,21 @@
                     <img src="Escultura/Venus Americana  escultura en ceramica aerea.JPG" loading="lazy" alt="escultura" />
                 </figure>
                 <div class="info-product">
-                    <h3 class="TituloModal">Vuelvo al Sur 70 X 30 cm</h3>
-                    <p class="Descrip"> </p>
+                    <h3 class="TituloModal">Venus Americana</h3>
+                    <p class="Descrip">Escultura en ceramica aerea</p>
                     <p class="price">€80</p>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Todos los derechos reservados® por <strong>Hector Luna</strong> Galería Virtual</p>
+        </div>
+    </footer>
+    <!-- <script src="index.js"></script> -->
+
+    <script src="main.js"></script>
 </body>
 
 </html>
