--- a/index.html
+++ b/index.html
@@ -353,14 +353,13 @@
         <a href="https://wa.me/34688738030" class="whatsapp-button" target="_blank">
             <img src="pintura/whatsapp.png" alt="Icono de WhatsApp" height="60px" />
         </a>
-        <footer class="footer">
-            <img src="pintura/Logo_Hector.ico" alt="" width="18px" /></div>
-    <b>Hector Luna</b></p>
-
+    </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Todos los derechos reservados® por <strong>Hector Luna</strong> Galería Virtual</p>
+        </div>
     </footer>
-    <!-- <script src="index.js"></script> -->
 
-    <script src="main.js"></script>
 
 </body>
 
