--- a/sobreMi.html
+++ b/sobreMi.html
@@ -164,6 +164,13 @@
 
     </div>
     <!-- -----------------------Fin Seccion Hero-------------------  -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Todos los derechos reservados® por <strong>Hector Luna</strong> Galería Virtual</p>
+        </div>
+    </footer>
+
+    <script src="main.js"></script>
 
 </body>
 
