--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="es">
 
 <head>
+    <meta name="geo.region" content="ES-GI" />
+    <meta name="geo.placename" content="Tolosa" />
+    <meta name="geo.position" content="43.134840;-2.078010" />
+    <meta name="ICBM" content="43.134840, -2.078010" />
+    <!-- Etiquetas de lenguaje -->
+    <meta name="language" content="Spanish">
+    <meta charset="UTF-8" />
 
     <!-- Etiquetas de lenguaje -->
     <meta name="language" content="Spanish">
