Cambiando link WhatsApp

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="redes">
-                    <a href="https://www.facebook.com/profile.php?id=100024823500876" class="button" target="_blank">
+                    <a href="https://www.facebook.com/hector.lunalara.7" class="button" target="_blank">
                         <img src="iconos/facebook.png" alt="Icono de Facebook" height="30px" />
                     </a>
                     
