--- a/sobreMi.html
+++ b/sobreMi.html
@@ -89,8 +89,8 @@
 
             
 
-            <div style="font-family: Lato, sans-serif; margin: 0 auto; width: 80%; padding: 20px; background-color: rgba(255, 255, 255,0.7); border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1);">
-                <h2 style="color: #333; text-align: center;font-size: 2.3rem;"><i>EXPOSICIONES MÁS IMPORTANTES:</i></h2>
+            <div style="font-family: Lato, sans-serif; margin: 0 auto; width: 80%; padding: 20px; background-color: rgba(255, 255, 255,0.5); border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1); margin-top: 3rem;">
+                <h2 style="color: #333; text-align: center;font-size: 2.3rem;"><i>Mi trayectoria:</i></h2>
                 <table style="width:100%; font-size: 1.7rem;">
                     <tr>
                         <td>Aniztasunak expo colectiva itinerante</td>
