--- a/sobreMi.html
+++ b/sobreMi.html
@@ -23,7 +23,7 @@
     <header class="header">
 
         <div class="AlFinal">
-
+            <!-- hay que hacer el menu estatico en movil -->
             <nav class="navbar navbar-expand-lg navbar-light navbar-transparente">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img class="logo" src="iconos/logoHector-sinFondo.png" alt="logo" height="80px" /></a>
