--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Para mejorar la busqueda en google -->
+    <!--TODO Para mejorar la busqueda en google -->
     <title>Galeria Virtual Héctor Luna</title>
     <!-- Links Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,10 +42,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="sobreMi.html">Sobre mí</a>
+                                <a class="nav-link active"  href="sobreMi.html">Sobre mí</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Pintura</a>
+                                <a class="nav-link" aria-current="page" href="#">Pintura</a>
                             </li>
                             <li class="nav-item">
 
